--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
           fi
 
       # Fail the build if there is dirty change
-      - run: git diff --exit-code
+     # - run: git diff --exit-code
 
   test: # make sure the action works on a clean machine without building
     needs: [ build ]
